--- a/Pilot/Pilot/Views/Shared/_Layout.cshtml
+++ b/Pilot/Pilot/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @Html.ActionLink("View'e gidecek bu","cemBasgan","Home")
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
